[package]
name = "green_copper_runtime"
version = "0.0.4"
authors = ["info@hirofa.com"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["all"]

crypto = ["uuid"]
jwt = ["jwt-simple", "uuid", "serde", "serde_json"]

all = ["io", "db", "com", "features", "util", "crypto", "jwt", "htmldom", "parsers"]

parsers = ["csvparser"]
csvparser = ["csv"]
htmldom = ["kuchiki", "html5ever"]

io = ["gpio", "fs"]
db = ["mysql"]

fs = []
gpio = ["gpio-cdev"]
mysql = ["mysql_lib"]

com = ["http"]
http = ["reqwest"]

features = ["commonjs", "console", "fetch"]

commonjs = []
fetch = ["http"]
console = []
util = ["cache"]
cache = ["lru"]



[dependencies]
#quickjs_runtime = {version="0.4", optional=true}
#todo make this a dev dep and only use for tests
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime', optional=true}
#quickjs_runtime = { path = '../quickjs_es_runtime', optional=true}
#todo make this a dev dep and only use for tests
#libquickjs-sys = {version="0.9.0", optional=true}
#libquickjs-sys = {git= "https://github.com/HiRoFa/quickjs-rs"}
hirofa_utils = "0.5"
#hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
#hirofa_utils = { path = '../utils'}

libc = "0.2"
lazy_static = "1.4.0"
log = "0.4.8"
simple-logging = "2.0.2"
rand = "0.7.0"
num_cpus = "1.0"
backtrace = "0.3.56"
url = "2.2.1"
gpp = "0.6"
cached = "0.26"

reqwest = {version = "0.11", features=["rustls-tls", "cookies", "gzip", "deflate", "multipart", "blocking"], optional = true}
gpio-cdev = {git = "https://github.com/rust-embedded/gpio-cdev", optional = true, features = ["async-tokio", "futures"]}
futures = {version = "0.3"}
mysql_lib = {package="mysql_async", version = "0.31",  optional = true}
lru = {version = "0.7.0", optional = true}
csv = {version = "1.1.6", optional = true}

uuid = {version="1.0.0-alpha.1", features=["v4", "serde"], optional = true}
jwt-simple = {version="0.10", optional = true}
serde = {version="1.0", optional = true}
serde_json = {version="1.0", optional = true}

kuchiki = {version="0.8.1", optional = true}
html5ever = {version="0.25.2", optional = true}

tokio = "1"

[dev-dependencies]
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime'}
quickjs_runtime = "0.8"
simple-logging = "2.0.2"
#quickjs_runtime = "0.8"
#quickjs_runtime = { path = '../quickjs_es_runtime'}