[package]
name = "green_copper_runtime"
version = "0.2.0"
authors = ["info@hirofa.com"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["all"]

crypto = ["uuid"]
jwt = ["jwt-simple", "uuid", "serde", "serde_json"]

all = ["io", "db", "com", "features", "util", "crypto", "jwt", "htmldom", "parsers", "encoding"]

encoding = ["base64"]
parsers = ["csvparser"]
csvparser = ["csv"]
htmldom = ["kuchiki", "html5ever"]

io = ["gpio", "fs"]
db = ["mysql", "sqlx"]

fs = []
gpio = ["gpio-cdev"]
mysql = ["mysql_lib"]
sqlx = ["sqlx_lib"]

com = ["http"]
http = ["reqwest"]

features = ["commonjs", "console", "fetch", "settimeout", "setinterval", "setimmediate"]

commonjs = []
fetch = ["http"]
console = ["quickjs_runtime/console"]
settimeout = ["quickjs_runtime/settimeout"]
setinterval = ["quickjs_runtime/setinterval"]
setimmediate = ["quickjs_runtime/setimmediate"]


util = ["cache"]
cache = ["lru"]



[dependencies]
quickjs_runtime = {version="0.13"}
#quickjs_runtime = { path = '../quickjs_es_runtime', features = ["typescript", "default"]}
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime', features = ["typescript", "default"]}
#libquickjs-sys = {package="hirofa-quickjs-sys", path='../quickjs-sys', features=["quickjs-ng"]}
#libquickjs-sys = {package="hirofa-quickjs-sys", git='https://github.com/HiRoFa/quickjs-sys', features=["bellard"]}
libquickjs-sys = {package="hirofa-quickjs-sys", version="0.4", features=["bellard"], default-features=false}
hirofa_utils = "0.7"
#hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
#hirofa_utils = { path = '../utils'}

libc = "0.2"
lazy_static = "1.4.0"
log = "0.4.8"
simple-logging = "2.0.2"
rand = "0.8"
num_cpus = "1.0"
backtrace = "0.3.56"
url = "2.2.1"
gpp = "0.6"
cached = "0.43"

reqwest = {version = "0.11", features=["rustls-tls", "cookies", "gzip", "deflate", "multipart", "blocking"], optional = true, default-features = false}
gpio-cdev = {git = "https://github.com/rust-embedded/gpio-cdev", optional = true, features = ["async-tokio", "futures"]}
futures = {version = "0.3"}
mysql_lib = {package="mysql_async", version = "0.33.0",  optional = true}
sqlx_lib = {package="sqlx", version = "0.7.3", features = ["mysql", "postgres", "runtime-tokio", "time", "chrono", "uuid"], optional = true}
lru = {version = "0.12.1", optional = true}
csv = {version = "1.1.6", optional = true}
uuid = {version="1", features=["v4", "serde"], optional = true}
jwt-simple = {version="0.11", optional = true}
serde = {version="1.0", optional = true}
serde_json = {version="1.0", optional = true}

regex = "1.8.1"

kuchiki = {version="0.8.1", optional = true}
html5ever = {version="0.25.2", optional = true}
base64 = {version="0.21.0", optional=true}
#kuchiki = {git="https://github.com/kuchiki-rs/kuchiki#f92e4c047fdc30619555da282ac7ccce1d313aa6", optional = true}
#html5ever = {version="0.26", optional = true}

tokio = "1"
anyhow = "1"

[dev-dependencies]

simple-logging = "2.0.2"
