[package]
name = "green_copper_runtime"
version = "0.2.2"
authors = ["info@hirofa.com"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["all"]

crypto = ["uuid"]
jwt = ["jwt-simple", "uuid", "serde", "serde_json"]

all = ["io", "db", "com", "features", "util", "crypto", "jwt", "htmldom", "parsers", "encoding"]

encoding = ["base64"]
parsers = ["csvparser"]
csvparser = ["csv"]
htmldom = ["kuchiki", "html5ever"]

io = ["gpio", "fs"]
db = ["sqlx"]

fs = []
gpio = ["gpio-cdev"]
sqlx = ["sqlx_lib"]

com = ["http"]
http = ["reqwest"]

features = ["commonjs", "console", "fetch", "settimeout", "setinterval", "setimmediate"]

commonjs = []
fetch = ["http"]
console = ["quickjs_runtime/console"]
settimeout = ["quickjs_runtime/settimeout"]
setinterval = ["quickjs_runtime/setinterval"]
setimmediate = ["quickjs_runtime/setimmediate"]


util = ["cache"]
cache = ["lru"]



[dependencies]
quickjs_runtime = { version = "0.16" }
#quickjs_runtime = { path = '../quickjs_es_runtime', features = ["typescript", "default"]}
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime', features = ["typescript", "default"]}
#libquickjs-sys = {package="hirofa-quickjs-sys", path='../quickjs-sys', features=["quickjs-ng"]}
#libquickjs-sys = {package="hirofa-quickjs-sys", git='https://github.com/HiRoFa/quickjs-sys', features=["bellard"]}
libquickjs-sys = { package = "hirofa-quickjs-sys", version = "0.11", features = ["bellard"], default-features = false }
hirofa_utils = "0.7"
#hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
#hirofa_utils = { path = '../utils'}

lazy_static = "1.4.0"
log = "0.4.8"
simple-logging = "2.0.2"
backtrace = "0.3.56"
url = "2.2.1"
gpp = "0.6"

reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "gzip", "deflate", "multipart", "blocking"], optional = true, default-features = false }
gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", optional = true, features = ["async-tokio", "futures"] }
futures = { version = "0.3" }
sqlx_lib = { package = "sqlx", version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio", "time", "chrono", "uuid", "rust_decimal"], optional = true }
lru = { version = "0.14", optional = true }
csv = { version = "1.1.6", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
num-traits = "0.2"
cached = "0.55"

regex = "1.8.1"

#kuchiki = {version="0.8.1", optional = true}
kuchiki = { package = "kuchikiki", git = "https://github.com/HiRoFa/kuchikiki", optional = true }
html5ever = { version = "0.27", optional = true }
base64 = { version = "0.22", optional = true }
#kuchiki = {git="https://github.com/kuchiki-rs/kuchiki#f92e4c047fdc30619555da282ac7ccce1d313aa6", optional = true}
#html5ever = {version="0.26", optional = true}

tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"

[dev-dependencies]

simple-logging = "2.0.2"
